welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: not found: value taille
    setCouleurBrosse(T((decalage) % taille));
                                    ^Array2:24: error: not found: value taille
      setCouleurBrosse(T((k + decalage) % taille));
                                          ^Array2:5: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array2'
override def run() {
             ^